crates/aven-check/tests/fixtures/check/valid/comptime-type-map.av
User = { name: Text, email: Text }
clone = (object) => { keysOf(object) -> k; (k, object[k]) }
Cloned = clone(User)
x : Cloned = { name: "Ada", email: "ada@x.dev" }
