crates/aven-check/tests/fixtures/check/invalid/call-arg-tuple.av
f : (Text) -> Int
f = (x) => { text: x, value: 1 }.value
result : (Int, Int) = (f(42), 1)
